# Etinan

./: .gitignore  CMakeLists.txt
assets/: base.fs  base.vs
engine/: Application.cpp  Application.h  CMakeLists.txt  EtinanEngine.cpp  EtinanEngine.h  main.cpp
engine/Debug/: Macros.h
engine/GUI/: EtinanGui.cpp  EtinanGui.h
engine/IOmgr/: Model.cpp  Model.h  Shader.cpp  Shader.h
engine/Renderer/: ArrayAndBuffer.h  Buffers.h  Camera.h  Material.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h
